# eeg-ml-pipeline

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/eeg_ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ml/: Loading_ml.py  db.py  file_storage.py  job_repository.py  miegas.py  models.py  night_pipeline.py  result_writer.py  scaler.pkl  sleep.py  statistics.py  worker.py
