[project]
name = "eeg-ml-pipeline"
version = "0.1.0"
description = "EEG model training pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "mne>=1.6",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "joblib>=1.4",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "minio>=7.2.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
